feat(metrics): Implement domain model and persistence for compliance files
- Added `BankId` value object to represent bank identifiers.
- Created `ComplianceFile` domain model to encapsulate file-level metrics.
- Developed `DashboardMetrics` service for computing metrics from compliance files.
- Introduced `FileEntity` as a JPA entity for persistence.
- Implemented `JpaFileRepository` for data access, including methods for finding and saving compliance files.
- Added `SpringDataFileRepository` interface for Spring Data JPA integration.
- Created SQL migration script to set up the `metrics_file` table with mock data.